--- a/environments/dev.env
+++ b/environments/dev.env
@@ -28,7 +28,7 @@ STRIPE_LIVE_SK="sk_live_...TOP_SECRET!!!"
 STRIPE_ENDPT_SECRET="whsec_BzXAJu9Rsxcl8PLsralRPSNyc20tHZKz"
 
 ## DB INFO
-NAME="admin"
+NAME="drapefit_test12"
 DB_NAME="drapefit-test12"
-DB_PASSWORD="kZ*Whr0#pd+_"
-HOST="drapefittest.cwgqyppop5ts.us-east-1.rds.amazonaws.com"
+DB_PASSWORD="g_G-=EVqW^TO"
+HOST="108.167.139.168"
